--- a/index.html
+++ b/index.html
@@ -35,15 +35,13 @@
         <li class="nav__listitem">
           Links
           <ul class="nav__listitemdrop">
-            <a href="https://github.com/mzashin/HW_F21DV" target="_blank"
+            <a href="https://github.com/movinayoob/Covid19DashBoard/" target="_blank"
               ><li>
                 <i style="font-size: 18px" class="fa">&#xf09b;</i> GitHub
               </li></a
             >
           </ul>
         </li>
-        <a href="./student_info.html"
-          ><li class="nav__listitem">Student Info</li></a>
       </ul>
     </nav>
 
